Fetch multiple datasets
